--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^10.16.14",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.0",
     "react-lazy-load": "^4.0.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
+    "react-timer-hook": "^3.0.7",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
